# clisitef-basic-tests

agentsitefweb/: teste.js  teste.sh
cpp/: CMakeLists.txt
cpp/include/: stdafx.hpp
cpp/include/clisitef/: clisitef_wrapper.hpp
cpp/src/: main.cpp
cpp/src/clisitef/: clisitef_wrapper.cpp
cpp/tests/: CMakeLists.txt  test.cpp
python/: client_curl.sh  client_test.py  http_api.py
